tests/errors/import_shadowing_local_distinct.dang
# Local declarations that shadow imported GraphQL types must remain distinct
# from the qualified imported types.

import Test

type User {
  name: String!
  origin: String! = "local"
}

enum Status { LOCAL REMOTE }

scalar URL

interface Node {
  label: String!
}

type Cat {
  name: String!
}

type Dog {
  name: String!
}

union SearchResult = Cat | Dog

# These imported values have qualified Test.* types, not the local shadowing types.
let userShouldFail: User! = Test.primaryUser
let statusShouldFail: Status! = Test.status
let urlShouldFail: URL! = Test.homepage
let nodeShouldFail: Node = Test.node(id: "1")
let searchShouldFail: [SearchResult!]! = Test.search(query: "John")
